--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title><%= productName %></title>
+
+    <meta charset="utf-8">
+    <meta name="description" content="<%= productDescription %>">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
+
+    <script src="http://localhost:8098"></script>
+    <link rel="icon" type="image/png" sizes="128x128" href="imgs/icons/favicon-128x128.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="imgs/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/icons/favicon-16x16.png">
+    <link rel="icon" type="image/ico" href="imgs/favicon.ico">
   </head>
-  <body id="app">
+  <body>
+    <!-- quasar:entry-point -->
   </body>
-  <script type="module" src="/src/main.ts"></script>
 </html>
