--- a/backend/static_dev/index.html
+++ b/backend/static_dev/index.html
@@ -1,6 +1,11 @@
-<script>
-_url = new window.URL(window.location.href);
-const _path = _url.pathname.split('/').filter((el) => el.length > 0);
-if (!_path.length || (_path.length && _path[0] !== 'api'))
-    window.location = 'http://localhost:3000/';
-</script>
+<html>
+    <script>
+        _url = new window.URL(window.location.href);
+        const _path = _url.pathname.split('/').filter((el) => el.length > 0);
+        if (!_path.length || (_path.length && _path[0] !== 'api'))
+            window.location = 'http://localhost:3000/';
+    </script>
+    <body>
+        <h2>Developpement api - ft_transcendance</h2>
+    </body>
+</html>
